--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@
 
 		<!-- データファイルを読み込み -->
 		<script src="data/languages.js"></script>
+		<script src="data/material-translations.js"></script>
 		<script src="data/stack-sizes.js"></script>
 		<script src="data/recipes-wood.js"></script>
 		<script src="data/recipes-stone.js"></script>
