完全なSEO対策を実装（メタタグ・構造化データ・sitemap・robots.txt）

--- a/index.html
+++ b/index.html
@@ -1,10 +1,108 @@
 <!DOCTYPE html>
-<html lang="ja">
+<html lang="ja" id="html-root"></html>
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>マイクラ材料計算機 🏗️</title>
+
+		<!-- SEO対策 -->
+		<title>
+			マイクラ材料計算機 | Minecraft Materials Calculator - 建築素材を自動計算
+		</title>
+		<meta
+			name="description"
+			content="マインクラフトの建築に必要な基礎素材を自動計算するツール。木材、石材、ガラスなど300種類以上の材料に対応。日本語・英語対応、スマホ対応。"
+		/>
+		<meta
+			name="keywords"
+			content="マインクラフト,Minecraft,材料計算,建築,素材,計算機,ツール,マイクラ,建築材料,レシピ計算"
+		/>
+		<meta name="author" content="Anju1023" />
+		<meta name="robots" content="index, follow" />
+
+		<!-- Open Graph (SNS共有用) -->
+		<meta
+			property="og:title"
+			content="マイクラ材料計算機 | Minecraft Materials Calculator"
+		/>
+		<meta
+			property="og:description"
+			content="マインクラフトの建築に必要な基礎素材を自動計算するツール。300種類以上の材料に対応、日本語・英語対応。"
+		/>
+		<meta property="og:type" content="website" />
+		<meta
+			property="og:url"
+			content="https://anju1023.github.io/Minecraft-materials-calculater/"
+		/>
+		<meta property="og:site_name" content="マイクラ材料計算機" />
+		<meta property="og:locale" content="ja_JP" />
+		<meta property="og:locale:alternate" content="en_US" />
+
+		<!-- Twitter Card -->
+		<meta name="twitter:card" content="summary" />
+		<meta
+			name="twitter:title"
+			content="マイクラ材料計算機 | Minecraft Materials Calculator"
+		/>
+		<meta
+			name="twitter:description"
+			content="マインクラフトの建築に必要な基礎素材を自動計算するツール。300種類以上の材料に対応。"
+		/>
+
+		<!-- 言語設定 -->
+		<html lang="ja" />
+		<link
+			rel="alternate"
+			hreflang="ja"
+			href="https://anju1023.github.io/Minecraft-materials-calculater/"
+		/>
+		<link
+			rel="alternate"
+			hreflang="en"
+			href="https://anju1023.github.io/Minecraft-materials-calculater/"
+		/>
+		<link
+			rel="alternate"
+			hreflang="x-default"
+			href="https://anju1023.github.io/Minecraft-materials-calculater/"
+		/>
+
+		<!-- Favicon -->
+		<link
+			rel="icon"
+			type="image/x-icon"
+			href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🏗️</text></svg>"
+		/>
+
 		<link rel="stylesheet" href="style.css" />
+
+		<!-- 構造化データ (JSON-LD) -->
+		<script type="application/ld+json">
+			{
+				"@context": "https://schema.org",
+				"@type": "WebApplication",
+				"name": "マイクラ材料計算機",
+				"alternateName": "Minecraft Materials Calculator",
+				"description": "マインクラフトの建築に必要な基礎素材を自動計算するツール。木材、石材、ガラスなど300種類以上の材料に対応。",
+				"url": "https://anju1023.github.io/Minecraft-materials-calculater/",
+				"applicationCategory": "GameApplication",
+				"operatingSystem": "Web Browser",
+				"offers": {
+					"@type": "Offer",
+					"price": "0",
+					"priceCurrency": "USD"
+				},
+				"creator": {
+					"@type": "Person",
+					"name": "Anju1023"
+				},
+				"inLanguage": ["ja", "en"],
+				"keywords": "マインクラフト, Minecraft, 材料計算, 建築, 素材, 計算機, ツール",
+				"browserRequirements": "Requires JavaScript. Requires HTML5.",
+				"softwareVersion": "1.0",
+				"datePublished": "2024-10-21",
+				"dateModified": "2024-10-21"
+			}
+		</script>
 	</head>
 	<body>
 		<div class="container">
