地理的SEO対策を強化（GEO・Dublin Core・地域別キーワード追加）

--- a/index.html
+++ b/index.html
@@ -14,10 +14,20 @@
 		/>
 		<meta
 			name="keywords"
-			content="マインクラフト,Minecraft,材料計算,建築,素材,計算機,ツール,マイクラ,建築材料,レシピ計算"
+			content="マインクラフト,Minecraft,材料計算,建築,素材,計算機,ツール,マイクラ,建築材料,レシピ計算,日本,Japan,アジア,Asia,無料ツール,オンラインツール,ウェブアプリ"
 		/>
 		<meta name="author" content="Anju1023" />
 		<meta name="robots" content="index, follow" />
+
+		<!-- 地理的SEO対策 -->
+		<meta name="geo.region" content="JP" />
+		<meta name="geo.country" content="Japan" />
+		<meta name="geo.placename" content="Japan" />
+		<meta name="DC.title" content="マイクラ材料計算機 | Minecraft Materials Calculator" />
+		<meta name="DC.subject" content="マインクラフト 材料計算 建築ツール" />
+		<meta name="DC.description" content="マインクラフトの建築に必要な基礎素材を自動計算するツール" />
+		<meta name="DC.language" content="ja" />
+		<meta name="DC.coverage" content="Japan" />
 
 		<!-- Open Graph (SNS共有用) -->
 		<meta
@@ -36,6 +46,7 @@
 		<meta property="og:site_name" content="マイクラ材料計算機" />
 		<meta property="og:locale" content="ja_JP" />
 		<meta property="og:locale:alternate" content="en_US" />
+		<meta property="og:country-name" content="Japan" />
 
 		<!-- Twitter Card -->
 		<meta name="twitter:card" content="summary" />
@@ -100,7 +111,26 @@
 				"browserRequirements": "Requires JavaScript. Requires HTML5.",
 				"softwareVersion": "1.0",
 				"datePublished": "2024-10-21",
-				"dateModified": "2024-10-21"
+				"dateModified": "2024-10-21",
+				"audience": {
+					"@type": "Audience",
+					"geographicArea": {
+						"@type": "Country",
+						"name": "Japan"
+					}
+				},
+				"availableLanguage": [
+					{
+						"@type": "Language",
+						"name": "Japanese",
+						"alternateName": "ja"
+					},
+					{
+						"@type": "Language", 
+						"name": "English",
+						"alternateName": "en"
+					}
+				]
 			}
 		</script>
 	</head>
