結果出力強化：採取 vs クラフト選択機能を実装

--- a/index.html
+++ b/index.html
@@ -389,6 +389,7 @@
 		<!-- データファイルを読み込み -->
 		<script src="data/languages.js"></script>
 		<script src="data/material-translations.js"></script>
+		<script src="data/material-sources.js"></script>
 		<script src="data/stack-sizes.js"></script>
 		<script src="data/recipes-wood.js"></script>
 		<script src="data/recipes-stone.js"></script>
